--- a/.env
+++ b/.env
@@ -27,6 +27,12 @@ APP_SECRET=e84ede469fa09695b7c4d4e1947b2f2c
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root:root@127.0.0.1:8889/projet_ambassade_v1.0?serverVersion=mariadb-10.4.20"
+#DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+
+#php bin/console doctrine:database:drop --if-exists --force
+#php bin/console doctrine:database:create
+#php bin/console doctrine:schema:update --force
+#php bin/console doctrine:fixtures:load -n
